--- a/KhStructs/KhStructs.csproj
+++ b/KhStructs/KhStructs.csproj
@@ -1,22 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
+        <LangVersion>preview</LangVersion>
+        <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <OutputPath>..\bin\$(Configuration)</OutputPath>
+        <DebugType>full</DebugType>
+        <DebugSymbols>true</DebugSymbols>
+        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <NoWarn>CS1591</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Game\Axa\" />
-      <Folder Include="Game\Bbs\" />
-      <Folder Include="Game\Ddd\" />
-      <Folder Include="Game\Kh1\" />
-      <Folder Include="Game\ReCom\" />
+        <PackageReference Include="Iced" Version="1.20.0" />
+        <ProjectReference Include="..\KhStructs.InteropSourceGenerators\KhStructs.InteropSourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Iced" Version="1.20.0" />
-    </ItemGroup>
-
 </Project>
