--- a/KhStructs/KhStructs.csproj
+++ b/KhStructs/KhStructs.csproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
         <PackageReference Include="Iced" Version="1.20.0" />
+        <PackageReference Include="TerraFX.Interop.Windows" Version="10.0.22621.2" />
         <ProjectReference Include="..\KhStructs.InteropSourceGenerators\KhStructs.InteropSourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     </ItemGroup>
 </Project>
